--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <h1>hello world</h1>
+    <!-- challenges
+        Use the utility classes we created to:
+        1- Hold the content in the middle of the page
+        2- Wrap the content either a flex or grid
+        3- Try to change the gap variable without modifying the original utility class
+        4- Use the .sr-only class on a div and see what happens 
+         -->
     <script src="app.js"></script>
 </body>
 
